--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,15 @@
 body {
   font-family: sans-serif;
 }
+
+.input-area {
+  background-color: #5a8eee;
+}
+
+.incomplete-area {
+  background-color: #ebb9f8;
+}
+
+.complete-area {
+  background-color: #ffffe0;
+}
